project-orion/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orion
  labels:
    name: orion
    environment: production
    app.kubernetes.io/name: orion
    app.kubernetes.io/part-of: orion
    app.kubernetes.io/managed-by: kubectl
